# sift-eye

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude/: settings.json
.claude/skills/correlate/: skill.md
.claude/skills/memory-analysis/: skill.md
.claude/skills/report/: skill.md
.claude/skills/triage/: skill.md
docs/: accuracy-report.md  architecture.md  dataset.md  devpost-submission.md
docs/plans/: 2026-06-14-sift-eye-design.md
examples/sample-output/: disk_deleted.txt  disk_ewfinfo.txt  disk_fls_fredr.txt  disk_fls_prefetch.txt  disk_fls_registry.txt  disk_fls_root.txt  disk_prefetch_list.txt  disk_programs.txt  disk_recycle_bin.txt  disk_triage_summary.txt  findings.jsonl  findings.jsonl.bak  mem_cmdline.txt  mem_hivelist.txt  mem_malfind.txt  mem_netscan.txt  mem_pslist.txt  mem_pstree.txt  mem_svcscan.txt  memory_analysis_summary.txt  report.md  tmp_pids.txt
mcp-server/: README.md  pyproject.toml
mcp-server/sift_eye_mcp/: __init__.py  audit.py  integrity.py  server.py
mcp-server/sift_eye_mcp/tools/: analysis.py  disk.py  memory.py
scripts/: setup-sift-vm.sh
