[project]
name = "sift-eye-mcp"
version = "0.1.0"
description = "Read-only MCP server wrapping SIFT Workstation forensic tools"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
sift-eye-mcp = "sift_eye_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
